@@ -1,3 +1,7 @@
+2015-01-14  Martin Liska  <mliska@suse.cz>
+
+	* gcc.dg/ipa/pr64307.c: New test.
+
 2015-01-14  Tejas Belagod  <tejas.belagod@arm.com>
 
 	* gcc.target/aarch64/vect-movi.c: Check for vectorization for
